// 撰寫格式是 Proto v3。
syntax = "proto3";  
// 生成的程式在 Golang 中將會屬於 `models` 套件。
package models;

// Shop 。
message Shop {
	int32 ID = 1;
	string Name = 2; 
}

// Item 。
message Item {
	int32 ID = 1; 
	string Name = 2;
	int32 ShopID = 3; 
	int32 Price = 4;
}

// ItemOption 。
message ItemOption {
	int32 ID = 1;
	int32 ItemID = 2;
	int32 OptionID = 3;
}

// Option 。
message Option {
	int32 ID = 1;
	bool IsOptional = 2;
	int32 SelectNum = 3;
}

// OptionSelection 。
message OptionSelection {
	int32 ID = 1;
	int32 OptionID = 2;
	int32 SelectionID = 3;
	int32 Price = 4;
}

// selection
message Selection {
	int32 ID = 1;
	string Name = 2;
}